clang/test/BSC/Negative/Ownership/Owned/use_moved_owned/use_moved_owned.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A {  
   _Public:
   int x;
   int y ;
  ~A(A this){
  }
};                       
int f(A a){ return 1;}

int test1() {
  A a = {1, 2};
  A b = a;
  f(a);     // expected-error {{use of moved value: `a`}}
  return 0;
}

_Owned struct S {
_Public:
  int a;
  int b;
};

_Owned struct T {
_Public:
  S s;
};

struct B {
  T t;
  int c;
};

void test2(struct B sb) {
  S s = sb.t.s;
  T t = sb.t;   // expected-error {{use of partially moved value: `sb.t`, sb.t.s is moved}}
}
